<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anybeam</string>
    <string name="replaceMe">Replace Me</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_refresh">Reload client list</string>
    <string name="icon_device">Device Icon</string>
    <string name="info_adress">IP-Address:</string>
    <string name="info_group">Group:</string>
    <string name="info_id">ID:</string>
    <string name="info_os">OS:</string>
    <string name="main_click_to_share">Tap to beam clipboard</string>
    <string name="main_instruction">Use the share button in other apps to beam data</string>
    <string name="action_settings_clipboard_remove">Clear Clipboard</string>
    <string name="action_settings_clipboard_set">Set Clipboard</string>
    <string name="default_client_name">Android</string>
    <string name="default_port_data">1338</string>
    <string name="default_port_broadcast">1337</string>
    <string name="default_encyption_type">AES128</string>
    <string name="default_device_type">TYPE_SMARTPHONE</string>
    <string name="default_display_time">5</string>
    <string name="default_data_folder">Download</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_group">Group Settings</string>
    <string name="settings_category_group_summary">All group settings must be equal on all devices.</string>
    <string name="settings_pref_broadcast_port">Broadcast Port</string>
    <string name="settings_pref_group_password">Group Password</string>
    <string name="settings_pref_group_password_summary">Set the group encryption password</string>
    <string name="settings_pref_encryption_type">Encryption type</string>
    <string name="settings_category_client">Client Settings</string>
    <string name="settings_pref_client_name">Client Name</string>
    <string name="settings_pref_data_port">Data Port</string>
    <string name="settings_pref_device_type">Device Type</string>
    <string name="settings_category_general">General Settings</string>
    <string name="settings_pref_display_time">Notification display time</string>
    <string name="settings_pref_display_time_summary">seconds (0 = unlimited)</string>
    <string name="settings_pref_data_folder">Download Path</string>
    <string name="settings_pref_data_folder_summary">/storage/</string>
    <string name="settings_pref_auto_url">Auto Open Links</string>
    <string name="settings_pref_auto_url_summary">Auto open recieved links</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_about_summary">
        Created and developed by:\n
        \t Christian Würthner\ny
        \t Jan-Henrik Preuß\n
        As team assignment to develop an Android application. \n \n 
        Computer Science (BSC), Furtwangen University 2014</string>
    <string name="settings_pref_port_error_title">Invalid Port</string>
    <string name="settings_pref_port_error_message">The port must be an integer between 1024 and 65535</string>
    <string name="send_title">Choose a Device</string>
    <string name="send_clients_not_found">No Clients Found</string>
    <string name="send_clipboard_error">The clipboard dose not contain text to beam</string>
    <string name="send_image_error">Fehlermeldung Fehlt!</string>
    <string name="transmission_in_done_title_clipboard">New clipboard text received</string>
    <string name="transmission_in_done_title_url">Tap to open URL</string>
    <string name="transmission_in_done_title_file">New file received, tap to open</string>
    <string name="transmission_in_progress_title">Receiving file</string>
    <string name="transmission_out_done_title_file">File Beamed</string>
    <string name="transmission_out_progress_title">Beaming in Progress</string>
    <string name="error_port_bind_message">The present ports for brodcast or data messages are already used by another application</string>
    <string name="error_port_bind_title">Port bind error</string>
    <string name="alt_ivsearching">Searching</string>
    

</resources>