<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="group_settings"
        android:title="Group Settings" >
        <Preference
            android:enabled="false"
            android:selectable="false"
            android:summary="All group settings must be the same on all your devices." />

        <EditTextPreference
            android:defaultValue="@string/default_port_broadcast"
            android:inputType="numberDecimal"
            android:key="port_broadcast"
            android:summary="Set port at which the device sends and listens to broadcasts"
            android:title="Broadcast Port" />
        <EditTextPreference
            android:key="group_password"
            android:summary="Set the group encryption password"
            android:title="Group Password" />

        <ListPreference
            android:defaultValue="@string/default_encyption_type"
            android:entries="@array/encyption_type"
            android:entryValues="@array/encyption_type_key"
            android:key="group_encryption_type"
            android:summary="Choose which encryption type should be used"
            android:title="Encryption type" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="client_settings"
        android:title="Client Settings" >
        <EditTextPreference
            android:key="client_name"
            android:title="Client Name" />
        <EditTextPreference
            android:defaultValue="@string/default_port_data"
            android:inputType="numberDecimal"
            android:key="port_data"
            android:summary="Set port at which the device recieves data"
            android:title="Data Port" />

        <ListPreference
            android:defaultValue="@string/default_device_type"
            android:entries="@array/device_type"
            android:entryValues="@array/device_type_key"
            android:key="client_type"
            android:title="Device Type" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="general_settings"
        android:title="General Preferences" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="gen_auto_clipboard"
            android:summary="Share clipboard between devices"
            android:title="Auto Clipboard" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About" >
        <Preference
            android:enabled="false"
            android:selectable="false"
            android:summary="Creadet and developed by Christian Würthner und Jan-Henrik Preuß Furtwangen university 2014"
            android:title="Any Beam" />

        <PreferenceScreen android:title="Icons" >
            <Preference
                android:summary="Some Text about our beautiful icons :D"
                android:title="Icons" />
        </PreferenceScreen>
        <PreferenceScreen android:title="Legal Notices" >
            <Preference
                android:summary="LEGALBAHBAH"
                android:title="Icons" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>